[gd_scene load_steps=59 format=2]

[ext_resource path="res://Player/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://Alt Animations/Blocky Block.png" type="Texture" id=2]
[ext_resource path="res://Alt Animations/Punchy Punch.png" type="Texture" id=3]
[ext_resource path="res://Alt Animations/Jumpy Jump 1.png" type="Texture" id=4]
[ext_resource path="res://Alt Animations/Jumpy Jump 2.png" type="Texture" id=5]
[ext_resource path="res://Alt Animations/Jumpy Jump 3.png" type="Texture" id=6]
[ext_resource path="res://Alt Animations/Runny Run Right.png" type="Texture" id=7]
[ext_resource path="res://Alt Animations/Runny Run Left.png" type="Texture" id=8]
[ext_resource path="res://Alt Animations/Throw Frame 2.png" type="Texture" id=9]
[ext_resource path="res://Alt Animations/Throw Frame 3.png" type="Texture" id=10]
[ext_resource path="res://Alt Animations/Standy Stand.png" type="Texture" id=11]
[ext_resource path="res://Alt Animations/Aimy Aim.png" type="Texture" id=12]
[ext_resource path="res://Player/PlayerSprite.gd" type="Script" id=13]
[ext_resource path="res://Player/punch area/punch area.gd" type="Script" id=14]
[ext_resource path="res://assets/reticle.png" type="Texture" id=15]
[ext_resource path="res://Player/AimSprite.gd" type="Script" id=16]
[ext_resource path="res://Player/Animations/frame0011.png" type="Texture" id=17]
[ext_resource path="res://Player/Animations/frame0000.png" type="Texture" id=18]
[ext_resource path="res://Player/Animations/frame0001.png" type="Texture" id=19]
[ext_resource path="res://Player/Animations/frame0002.png" type="Texture" id=20]
[ext_resource path="res://Player/Animations/frame0015.png" type="Texture" id=21]
[ext_resource path="res://Player/Animations/frame0003.png" type="Texture" id=22]
[ext_resource path="res://Player/Animations/frame0004.png" type="Texture" id=23]
[ext_resource path="res://Player/Animations/frame0005.png" type="Texture" id=24]
[ext_resource path="res://Player/Animations/frame0006.png" type="Texture" id=25]
[ext_resource path="res://Player/Animations/frame0007.png" type="Texture" id=26]
[ext_resource path="res://Player/Animations/frame0008.png" type="Texture" id=27]
[ext_resource path="res://Player/Animations/frame0009.png" type="Texture" id=28]
[ext_resource path="res://Player/Animations/frame0010.png" type="Texture" id=29]
[ext_resource path="res://Player/Animations/frame0016.png" type="Texture" id=30]
[ext_resource path="res://Player/Animations/frame0017.png" type="Texture" id=31]
[ext_resource path="res://Player/Animations/Stagger.png" type="Texture" id=32]
[ext_resource path="res://Player/Animations/Stagger2.png" type="Texture" id=33]
[ext_resource path="res://Player/Animations/frame0012.png" type="Texture" id=34]
[ext_resource path="res://Player/Animations/frame0013.png" type="Texture" id=35]
[ext_resource path="res://Player/Animations/frame0014.png" type="Texture" id=36]
[ext_resource path="res://Player/Animations/frame0018.png" type="Texture" id=37]
[ext_resource path="res://Player/Stagger/Stagger.gd" type="Script" id=38]
[ext_resource path="res://Player/Default/Default.gd" type="Script" id=39]
[ext_resource path="res://Player/Default/Moving/Moving.gd" type="Script" id=40]
[ext_resource path="res://Player/Default/Moving/Running/Running.gd" type="Script" id=41]
[ext_resource path="res://Player/Default/Moving/Jumping/Jumping.gd" type="Script" id=42]
[ext_resource path="res://Player/Default/Moving/Falling/Falling.gd" type="Script" id=43]
[ext_resource path="res://Player/Default/Combat/Combat.gd" type="Script" id=44]
[ext_resource path="res://Player/Default/Combat/Blocking/Blocking.gd" type="Script" id=45]
[ext_resource path="res://Player/Default/Combat/Punching/Punching.gd" type="Script" id=46]
[ext_resource path="res://Player/Charge/Charge.gd" type="Script" id=47]
[ext_resource path="res://Player/Swap/Swap.gd" type="Script" id=48]
[ext_resource path="res://Player/Swap/Throwing/Throwing.gd" type="Script" id=49]
[ext_resource path="res://Player/Swap/Teleport/Teleport.gd" type="Script" id=50]
[ext_resource path="res://Player/Label.gd" type="Script" id=51]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Blocking",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Punching",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": false,
"name": "Jumping",
"speed": 12.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Running",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "Falling",
"speed": 12.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Stagger",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Throwing",
"speed": 12.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "Aiming",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.3556, 40.759 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.29331, 1.26032 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 26.007, 30 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "Blocking",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "Punching",
"speed": 12.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "Jumping",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "Running",
"speed": 12.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": false,
"name": "Falling",
"speed": 12.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "Stagger",
"speed": 12.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 36 ), ExtResource( 36 ) ],
"loop": false,
"name": "Throwing",
"speed": 12.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "Aiming",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )
width = 70

[node name="Player1" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="notPlayerSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 6.85309, -14.421 )
scale = Vector2( 0.243459, 0.243427 )
frames = SubResource( 1 )
animation = "Running"
playing = true
flip_h = true
script = ExtResource( 13 )

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 10.48 )
scale = Vector2( 1.01, 0.96 )
shape = SubResource( 2 )

[node name="punch area" type="Area2D" parent="."]
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="punch area"]
position = Vector2( 41.0052, -5.0397 )
scale = Vector2( 8.03, 6.58 )
shape = SubResource( 3 )

[node name="AimSprite" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 15 )
offset = Vector2( 51.59, 0 )
script = ExtResource( 16 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12.98 )
scale = Vector2( 1, 1.16 )
z_index = 1
shape = SubResource( 4 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0, 2.33, 3.49, 1 )
scale = Vector2( 1.5, 1.5 )
z_index = 2
frames = SubResource( 5 )
animation = "Punching"
frame = 2
playing = true
script = ExtResource( 13 )

[node name="Stagger" type="Node" parent="."]
script = ExtResource( 38 )

[node name="Default" type="Node" parent="."]
script = ExtResource( 39 )

[node name="Moving" type="Node" parent="Default"]
script = ExtResource( 40 )

[node name="Running" type="Node" parent="Default/Moving"]
script = ExtResource( 41 )

[node name="Jumping" type="Node" parent="Default/Moving"]
script = ExtResource( 42 )

[node name="Falling" type="Node" parent="Default/Moving"]
script = ExtResource( 43 )

[node name="Combat" type="Node" parent="Default"]
script = ExtResource( 44 )

[node name="Blocking" type="Node" parent="Default/Combat"]
script = ExtResource( 45 )

[node name="Punching" type="Node" parent="Default/Combat"]
script = ExtResource( 46 )

[node name="Charge" type="Node" parent="."]
script = ExtResource( 47 )

[node name="Swap" type="Node" parent="."]
script = ExtResource( 48 )

[node name="Throwing" type="Node" parent="Swap"]
script = ExtResource( 49 )

[node name="Teleport" type="Node" parent="Swap"]
script = ExtResource( 50 )

[node name="Health" type="Sprite" parent="."]
position = Vector2( -33.8464, -49.2107 )
scale = Vector2( 1, 6.3668 )
texture = SubResource( 7 )
offset = Vector2( 35, 0 )
script = ExtResource( 51 )
[connection signal="area_entered" from="hitbox" to="." method="_on_Area2D_area_entered"]
